--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "OTkyNDUzOTk3MzcxODU5MDQ1.G_bAOx.8PE0bxgAanvSQamOXKw0m-ERGnkdRbQFQB82FM",
+    "token": "Buscar token en mi acc de discord",
     "clientId": "992453997371859045",
 	"guildId": "759538370963046426"
 }
