feat: narra partidas solo

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "Buscar token en mi acc de discord",
-    "clientId": "992453997371859045",
-	"guildId": "759538370963046426"
-}
+    "token": "",
+    "clientId": "",
+	"guildId": ""
+}           
