--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.10.0",
+    "axios": "^0.27.2",
     "discord-api-types": "^0.36.0",
     "discord.js": "^13.8.1",
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.10",
+    "node-fetch": "^3.2.6",
     "opusscript": "^0.0.8"
   },
   "name": "theboys",
